# romfs-lib

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml  codeql-analysis.yml  flawfinder-analysis.yml
cmd/: main.c
include/: path_utils.h  romfs.h
src/: CMakeLists.txt  path_utils.c  romfs-internal.c  romfs-internal.h  romfs.c
test/: CMakeLists.txt  advanced_romfs.c  basic_romfs.c  common_test_defines.h  empty_romfs.c  test-api.c  test-internal.c  test-multiple.c  test-path.c  tests.c
test/test_runners/: runner.c
test/utils/: README.md  convert_to_bin.c
